--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "agent-starter",
-  "description": "A hassle-free TS library template.",
+  "name": "tarko-github-agent",
   "version": "0.0.0",
+  "description": "A Github Agent",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org",
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "keywords": [
+    "tarko-agent",
+    "agent-infra",
+    "agent",
     "typescript",
     "library"
   ],
@@ -27,7 +37,7 @@
   },
   "dependencies": {
     "@agent-infra/browser-search": "^0.0.5",
-    "@multimodal/agent": "0.3.0-beta.1"
+    "@mcp-agent/core": "0.3.0-beta.1"
   },
   "devDependencies": {
     "tsx": "^4.20.3",
