--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: GitHub Community Discussions
+  - name: GitHub Discussions
     url: https://github.com/agent-contrib/github-agent/discussions
-    about: Please ask and answer questions here.
-  - name: GitHub Security
+    about: Ask questions and discuss GitHub Agent usage
+  - name: Security Issues
     url: https://github.com/agent-contrib/github-agent/security/advisories/new
-    about: Please report security vulnerabilities here.
+    about: Report security vulnerabilities privately
