chore: add debug logging patterns to .gitignore
Prevents accidental commit of agent debug/logging files:
- Event streams
- LLM requests/responses
- Tool call logs
- Debug session directories

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ lib
 esm
 .DS_Store
 dist
+
+# Debug/logging directories
+L0az389IL90JbOyjWcv1M/
+**/event-stream.jsonl
+**/llm-request.jsonl
+**/llm-response.jsonl
+**/tool-calls.jsonl
